--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ header div p{margin-left:5px;font-size:0.66em;}
    </head>
   <body>
    <header>
-<img src="image/logo3.png" alt="logo" style="margin-left:0;float:left">
+<img src="logo3.png" alt="logo" style="margin-left:0;float:left">
 <div>
   <ul class="nav nav-pills text-center text-nowrap" style="margin-top:0;width:100%">
     <li class="active "><a href="#"><span class="glyphicon glyphicon-home" id="home"></span>主页</a></li>
