--- a/star.html
+++ b/star.html
@@ -78,7 +78,7 @@ header div p{margin-left:5px;font-size:0.66em;}
                  alt="C罗">
             <div class="caption">
                <p class="" data-toggle="collapse" data-target="#demo2">
-             <span class="h4">C&nbsp;罗</span>&nbsp;点击下拉了解&nbsp<span class="glyphicon glyphicon-arrow-down"></span></p>
+             <span class="h4">C&nbsp;&nbsp罗</span>&nbsp;点击下拉了解&nbsp<span class="glyphicon glyphicon-arrow-down"></span></p>
                 <p id="demo2" class="collapse">
                     葡萄牙足球运动员,世界上最好的球员之一，司职前锋，现效力于皇家马德里足球俱乐部。然而那时的他远称不上健硕,C罗招牌式的“踩单车”过人动作、力量十足的射门、在皇马等豪门俱乐部出色的表现，使他逐渐成为葡萄牙队新的领军人物。
                     <span class="" data-toggle="collapse" data-target="#demo2">
