--- a/star.html
+++ b/star.html
@@ -52,7 +52,7 @@ header div p{margin-left:5px;font-size:0.66em;}
     <li class="disabled" title="请在主页注册登录"><a href="#" >登陆</a></li>
      <li class="disabled" title="请在主页注册登录"><a href="#" >注册</a></li>
    </ul>
-<p><span class="h5">说明:</span>这是一个基于bootstrap开发的关于俄罗斯世界杯的网站,利用bootstrap可以快速开发良好布局实现特效功能，链接自官网上的cdn，如果出问题请联系站长或访问备用地址：http://lujiax.gitee.io/text_page</p>
+<p><span class="h5">说明:</span>这是一个基于bootstrap开发的关于俄罗斯世界杯的网站,利用bootstrap可以快速开发良好布局实现特效功能,如果出问题请联系站长或访问备用地址：http://lujiax.gitee.io/text_page</p>
      </div>  
 </header>
 
