--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ header div p{margin-left:5px;font-size:0.66em;}
 <img src="image/logo3.png" alt="logo" style="margin-left:0;float:left">
 <div>
   <ul class="nav nav-pills text-center text-nowrap" style="margin-top:0;width:100%">
-    <li class="active "><a href="#"><span class="glyphicon glyphicon-home" id="home"></span>主</a></li>
+    <li class="active "><a href="#"><span class="glyphicon glyphicon-home" id="home"></span>主页</a></li>
     <li class=""><a href="star.html">球星页</a></li>
     <li><a href="country.html">国家页</a></li>
     <li><a href="#" data-toggle="modal" data-target="#myModal" >登陆</a></li>
